完成标签和分类

--- a/src/main/resources/templates/admin/blogs_input.html
+++ b/src/main/resources/templates/admin/blogs_input.html
@@ -11,7 +11,7 @@
 <body>
 
   <!--导航-->
-  <div th:replace="~{adminFragements::admin_top(2)}"></div>
+  <div th:replace="~{admin/adminFragements::admin_top(2)}"></div>
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
