--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>分类</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" th:href="@{/css/me.css}">
+  <link rel="stylesheet" th:href="@{/static/css/me.css}">
 </head>
 <body>
 
