尝试将shiro改为SpringSecurity，认证授权等很很很很方便，但决定先把shiro+JPA版本的做完，再考虑重构为SpringSecurity+MP

--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>分类管理</title>
+  <title>标签管理</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/css/me.css}">
 </head>
 <body>
 
   <!--导航-->
-  <nav th:replace="~{/admin/adminFragements::admin_top(2)}"></nav>
+  <nav th:replace="~{/admin/adminFragements::admin_top(3)}"></nav>
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
@@ -38,8 +38,8 @@
             <td th:text="${iterStat.count}">1</td>
             <td th:text="${tag.name}">认知升级</td>
             <td>
-              <a th:href="@{/admin/tags/{id}/update(id=${tag.id})}" class="ui mini teal basic button">编辑</a>
-              <a th:href="@{/admin/tags/{id}/delete(id=${tag.id})}" class="ui mini red basic button">删除</a>
+              <a th:href="@{/admin/tags/}+${tag.id}+@{/update}" class="ui mini teal basic button">编辑</a>
+              <a th:href="@{/admin/tags/}+${tag.id}+@{/delete}" class="ui mini red basic button">删除</a>
             </td>
           </tr>
         </tbody>
