--- a/src/main/resources/templates/admin/tags_input.html
+++ b/src/main/resources/templates/admin/tags_input.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>新增分类</title>
+  <title>新增标签</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/lib/editormd/css/editormd.min.css}">
   <link rel="stylesheet" th:href="@{/css/me.css}">
