--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,9 @@
   <title>首页</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/css/me.css}">
+  <link rel="stylesheet" th:href="@{/css/blog.css}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script th:src="@{/js/spig.js}"></script>
 </head>
 <body>
 
@@ -104,7 +107,7 @@
             <div class="ui padded vertical segment m-padded-tb-large">
               <div class="ui mobile reversed stackable grid">
                 <div class="eleven wide column">
-                  <h3 class="ui header">你真的理解什么是财富自由吗？</h3>
+                  <h3 class="ui header">！！！！！！！！！！！！！！！</h3>
                   <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
                   <div class="ui grid">
                     <div class="eleven wide column">
@@ -514,9 +517,9 @@
           </div>
 
           <!--二维码-->
-          <h4 class="ui horizontal divider header m-margin-top-large">扫码关注我</h4>
+          <h4 class="ui horizontal divider header m-margin-top-large">扫码交流</h4>
           <div class="ui centered card" style="width: 11em">
-            <img src="../static/images/wechat.jpg" alt="" class="ui rounded image" >
+            <img th:src="@{/images/wechat.jpg}" alt="" class="ui rounded image" >
           </div>
         </div>
 
@@ -527,9 +530,19 @@
 
   <br>
   <br>
+  <div th:replace="~{blog-angle::angle-div}"></div>
   <!--底部footer-->
   <div th:replace="~{fragements::foot}"></div>
 
+  <div id="spig" class="spig">
+    <div id="mumu" class="mumu"></div>
+  </div>
+
+  <script type="text/javascript">
+    var isindex=true;
+    var title="";
+    var visitor="这位怪蜀黍";
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
@@ -537,6 +550,10 @@
     $('.menu.toggle').click(function () {
       $('.m-item').toggleClass('m-mobile-hide');
     });
+    var isindex=true;
+    var title="";
+    var visitor="NM$L";
+
   </script>
 </body>
 </html>
