--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -77,7 +77,7 @@
             <td th:text="${blog.getType().getName()}"></td>
             <td th:text="${blog.isRecommend() ? '是':'否'}"></td>
             <td th:text="${blog.getUpdateTime()}"></td>
-            <td th:text="${blog.isPublish() ? '草稿':'发布'}"></td>
+            <td th:text="${blog.isPublish() ? '发布':'草稿'}"></td>
             <td>
               <a th:href="@{/admin/blogs/}+${blog.id}+@{/update}" class="ui mini teal basic button">编辑</a>
               <a th:href="@{/admin/blogs/}+${blog.id}+@{/delete}" class="ui mini red basic button">删除</a>
