--- a/src/main/resources/templates/admin/blogs_input.html
+++ b/src/main/resources/templates/admin/blogs_input.html
@@ -24,12 +24,13 @@
   <div  class="m-container-big m-padded-tb-big">
     <div style="text-align: center"  th:hidden="${msg!=null ? false:true}" th:text="${msg!=null ? msg:''}" class="ui message red">Red</div>
     <div class="ui container">
-      <form id="blogdata" th:action="@{/admin/blogs/add}" method="post" class="ui form">
+      <form id="blogdata" th:object="${blog}" th:action="@{/admin/blogs/add}" method="post" class="ui form">
         <input type="hidden" name="publish">
+        <input type="hidden" name="id" th:value="*{id}">
         <div class="required field">
           <div class="ui left labeled input">
             <div class="ui selection compact teal basic dropdown label">
-              <input type="hidden" value="原创" >
+              <input type="hidden" th:value="*{flag}" name="flag">
               <i class="dropdown icon"></i>
               <div class="text">原创</div>
               <div class="menu">
@@ -38,13 +39,13 @@
                 <div class="item" data-value="翻译">翻译</div>
               </div>
             </div>
-            <input required="" type="text" name="title" placeholder="标题">
+            <input th:value="*{title}" required="" type="text" name="title" placeholder="标题">
           </div>
         </div>
 
         <div class="field">
           <div id="md-content" style="z-index: 1 !important;">
-            <textarea placeholder="博客内容" name="content" style="display: none">
+            <textarea th:text="*{content}" placeholder="博客内容" name="content" style="display: none">
             </textarea>
           </div>
         </div>
@@ -54,7 +55,7 @@
             <div class="ui left labeled action input">
               <label class="ui compact teal basic label">分类</label>
               <div class="ui fluid selection dropdown">
-                <input type="hidden" name="type.id">
+                <input type="hidden" th:value="*{type!=null}? *{type.id}" name="type.id">
                 <i class="dropdown icon"></i>
                 <div class="default text">分类</div>
                 <div class="menu">
@@ -66,8 +67,8 @@
           <div class="field">
             <div class="ui left labeled action input">
               <label class="ui compact teal basic label">标签</label>
-              <div class="ui fluid selection multiple search  dropdown">
-                <input type="hidden" name="tagIds">
+              <div class="ui tag fluid selection multiple search  dropdown">
+                <input type="hidden" th:value="*{tagIds}" name="tagIds">
                 <i class="dropdown icon"></i>
                 <div class="default text">标签</div>
                 <div class="menu">
@@ -81,33 +82,36 @@
         <div class="field">
           <div class="ui left labeled input">
             <label class="ui teal basic label">首图</label>
-            <input type="text" name="firstPicture" placeholder="首图引用地址">
+            <input th:value="*{firstPicture}" type="text" name="firstPicture" placeholder="首图引用地址">
           </div>
 
+        </div>
+        <div class="required field">
+          <textarea name="description" th:text="*{description}" placeholder="博客描述..." maxlength="200"></textarea>
         </div>
 
         <div class="inline fields">
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="recommend" name="recommend" checked class="hidden">
+              <input type="checkbox" id="recommend" name="recommend" th:checked="*{recommend}" checked class="hidden">
               <label for="recommend">推荐</label>
             </div>
           </div>
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="shareInfo" name="shareState" class="hidden">
+              <input type="checkbox" id="shareInfo" th:checked="*{shareState}" name="shareState" class="hidden">
               <label for="shareInfo">转载声明</label>
             </div>
           </div>
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="appreciation" name="appreciation" class="hidden">
+              <input type="checkbox" id="appreciation" th:checked="*{appreciation}" name="appreciation" class="hidden">
               <label for="appreciation">赞赏</label>
             </div>
           </div>
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="comment" name="comment" class="hidden">
+              <input type="checkbox" id="comment" th:checked="*{comment}" name="comment" class="hidden">
               <label for="comment">评论</label>
             </div>
           </div>
@@ -119,6 +123,7 @@
           <button type="button" class="ui button" onclick="window.history.go(-1)" >返回</button>
           <button type="submit" id="save-btn" class="ui secondary button">保存</button>
           <button type="submit" id="publish-btn" class="ui teal button">发布</button>
+
         </div>
 
       </form>
@@ -154,6 +159,10 @@
       on : 'hover'
     });
 
+    $('.ui.tag.dropdown').dropdown({
+      allowAdditions: true
+    });
+
     /*$('.ui.form').form({
       fields : {
         title : {
@@ -179,7 +188,9 @@
         }
       }
     });*/
-
+    /*
+    * 保存信息，判断是属于草稿还是已发布
+    * */
     $("#save-btn").click(function () {
         $('[name="publish"]').val(false);
         $("#blogdata").submit;
