--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -25,7 +25,7 @@
     <div class="ui container">
       <div th:hidden="${msg!=null ? false:true}" th:text="${msg!=null ? msg:''}"
            th:classappend="${#strings.equals(msg, '已经存在该标签')? 'red': 'green'}" class="ui message">Red</div>
-      <table class="ui celled table">
+      <table class="ui compact teal table">
         <thead>
           <tr>
             <th>序号</th>
