--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -10,7 +10,7 @@
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 th:text="${session.loginUser==null? 'Blog' : 'antigenMHC'}" class="ui teal header item"></h2>
-            <a href="@{#}" class="m-item item m-mobile-hide" th:classappend="${n==1} ? 'active'"><i class=" home icon"></i>首页</a>
+            <a th:href="@{/index/}" class="m-item item m-mobile-hide" th:classappend="${n==1} ? 'active'"><i class=" home icon"></i>首页</a>
             <a href="@{#}" class="m-item item m-mobile-hide" th:classappend="${n==2} ? 'active'"><i class=" idea icon"></i>分类</a>
             <a href="@{#}" class="m-item item m-mobile-hide" th:classappend="${n==3} ? 'active'"><i class=" tags icon"></i>标签</a>
             <a href="@{#}" class="m-item item m-mobile-hide" th:classappend="${n==4} ? 'active'"><i class=" clone icon"></i>归档</a>
@@ -18,10 +18,12 @@
             <a th:href="@{/login}" th:if="${session.loginUser==null}" class="m-item item m-mobile-hide"><i class="at icon"></i>登录</a>
             <a th:href="@{/admin/blogs}" th:if="${session.loginUser!=null}" class="m-item item m-mobile-hide"><i class="at icon"></i>管理</a>
             <div class="right m-item item m-mobile-hide">
-                <div class="ui icon inverted transparent input m-margin-tb-tiny">
-                    <input type="text" placeholder="Search....">
-                    <i class="search link icon"></i>
-                </div>
+                <form class="right m-item item m-mobile-hide" method="post" name="search" th:action="@{/search/}" target="_blank">
+                    <div class="ui icon inverted transparent input m-margin-tb-tiny">
+                    <input th:value="${query}" type="text" name="query" placeholder="请按回车进行搜索2333">
+                        <a type="submit"><i class="search link icon"></i></a>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
