--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -111,14 +111,14 @@
 <body>
 <!--500 error page that lets Pokemon take the blame so that you can get off scott free!-->
 <div id="moveArea">
-    <span class="pushIt">How did this happen, you ask?</span>
-    Well, a certain <span class="big" id="type"></span> pokémon used <span class="big" id="name"></span> causing <span class="big" id="maxDamage"></span> damage to our servers.
+    <span class="pushIt">貌似我写了一些bug出来</span>
+    emmmm，如果你有空的话<span class="big" >请联系</span><span class="big"></span>QQ：723493929<span class="big"></span>并告知如何出现的错误
 </div>
 <div id="effectArea">
   <span class="smallish">
-    This is a big deal because the attack was <span class="big" id="accuracy"></span>% accurate.
+    不胜感激<span class="big" id="accuracy"></span>
     <br/>
-    You might wanna <a class="goBack" th:href="@{/}">go back</a> because here's what we're dealing with:
+    快回去<a class="goBack big" th:href="@{/index/}">主页</a>辣🐎，这里没啥看的了
     <span class="big" id="definition"></span>
   </span>
 </div>
