--- a/src/main/resources/static/css/blog.css
+++ b/src/main/resources/static/css/blog.css
@@ -32,5 +32,5 @@
     width:175px;
     height:246px;
     cursor:move;
-    background:url(/images/spig.png) no-repeat;
+    background:url("/images/cc.png") no-repeat;
 }
