--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,16 +7,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/css/me.css}">
   <link rel="stylesheet" th:href="@{/css/APlayer.min.css}">
-  <link rel="stylesheet" th:href="@{/css/blog.css}">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script th:src="@{/js/spig.js}"></script>
 </head>
 <body>
-
-<!--博客精灵 start*-->
-<div id="spig" class="spig">
-  <div id="mumu" class="mumu"></div>
-</div>
 
   <!--导航-->
   <div th:replace="~{fragements::top(n=1)}"></div>
@@ -168,20 +161,30 @@
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
 
-  <script>
-    $('.menu.toggle').click(function () {
-      $('.m-item').toggleClass('m-mobile-hide');
-    });
-    var isindex=true;
-    var title="";
-    var visitor="NM$L";
-  </script>
+<script type="text/javascript">
+  L2Dwidget.init({
+    "model": {
+      jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
+      "scale": 1
+    },
+    "display": {
+      "superSample": 5,
+      "width": 200,
+      "height": 400,
+      "position": "right",
+      "hOffset": 10,
+      "vOffset": -28
+    }
+  });
+</script>
 
 <script type="text/javascript">
   var isindex=true;
   var title="";
-  var visitor="这位怪蜀黍";
+  var visitor="！！！";
 </script>
 
   <script th:src="@{/js/APlayer.min.js}"></script>
