标签页，分类页，关于我，归档，功能基本完善，准备发布

--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -107,7 +107,7 @@
   <div th:replace="~{fragements::foot}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+<script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
 
   <script>
     $('.menu.toggle').click(function () {
