--- a/src/main/resources/templates/admin/blogs_input.html
+++ b/src/main/resources/templates/admin/blogs_input.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客发布</title>
-  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/lib/editormd/css/editormd.min.css}">
   <link rel="stylesheet" th:href="@{/css/me.css}">
 </head>
@@ -135,8 +135,8 @@
   <!--底部footer-->
   <div th:replace="~{fragements::foot}"></div>
 
-  <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-  <script th:src="@{https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js}"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
   <script th:src="@{/lib/editormd/editormd.js}"></script>
 
   <script>
