--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>关于我</title>
-  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/css/me.css}">
+  <link rel="stylesheet" th:href="@{/css/APlayer.min.css}">
 </head>
 <body>
 
@@ -19,7 +20,7 @@
       <div class="ui stackable grid">
         <div class="eleven wide column">
           <div class="ui segment">
-            <img src="https://unsplash.it/800/600?image=1005" alt="" class="ui rounded image">
+            <img th:src="@{/images/about.jpg}" alt="" class="ui rounded image">
           </div>
         </div>
         <div class="five wide column">
@@ -27,37 +28,39 @@
             <div class="ui header">关于我</div>
           </div>
           <div class="ui attached segment">
-            <p class="m-text">antigenMHC，INTJ, 虚无主义.</p>
-            <p class="m-text">热爱动漫，喜欢当肥宅，正在探索高效学习编程技术的方法...</p>
+            <p class="m-text">狗粉丝，带哲学家</p>
+            <p class="m-text">一棵会思考的芦苇</p>
           </div>
           <div class="ui attached segment">
-            <div class="ui orange basic left pointing label">编程</div>
-            <div class="ui orange basic left pointing label">写作</div>
-            <div class="ui orange basic left pointing label">思考</div>
-            <div class="ui orange basic left pointing label">运动</div>
+            <div class="ui blue basic left pointing label">code</div>
+            <div class="ui purple basic left pointing label">二刺螈！二刺螈！</div>
+            <div class="ui Red basic left pointing label">运动(不存在的)</div>
           </div>
           <div class="ui attached segment">
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">JavaScript</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">Node</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">React</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">RN</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">MYSQL</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">...</div>
+            <div class="ui purple basic left pointing label m-margin-tb-tiny">二刺螈</div>
+            <div class="ui blue basic left pointing label m-margin-tb-tiny">非鳅</div>
+            <div class="ui green basic left pointing label m-margin-tb-tiny">otaku</div>
+            <div class="ui Red basic left pointing label m-margin-tb-tiny">压力马斯内</div>
+            <div class="ui pink basic left pointing label m-margin-tb-tiny">我超勇的</div>
+            <div class="ui yellow basic left pointing label m-margin-tb-tiny">web全不会码畜</div>
           </div>
           <div class="ui bottom attached segment">
-            <a th:href="@{#}" class="ui circular icon button"><i class="github icon"></i></a>
+            <a target="_blank" th:href="@{https://github.com/antigenMHC}" class="ui circular icon button"><i class="github icon"></i></a>
             <a th:href="@{#}" class="ui wechat circular icon button"><i class="weixin icon"></i></a>
-            <a th:href="@{#}" class="ui qq circular icon button" data-content="865729312" data-position="bottom center"><i class="qq icon"></i></a>
+            <a th:href="@{#}" class="ui qq circular icon button" ><i class="qq icon"></i></a>
           </div>
 
           <div class="ui wechat-qr flowing popup transition hidden">
             <img th:src="@{/images/wechat.jpg}" alt="" class="ui rounded image" style="width: 110px">
           </div>
+          <div class="ui qq-qr flowing popup transition hidden">
+            <img th:src="@{/images/qq.jpg}" alt="" class="ui rounded image" style="width: 110px">
+          </div>
           </div>
       </div>
 
     </div>
+    <div id="player"></div>
   </div>
 
   <br>
@@ -65,9 +68,10 @@
   <!--底部footer-->
   <div th:replace="~{fragements::foot}"></div>
 
-<script th:src="@{https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js}"></script>
-<script th:src="@{https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js}"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
   <script>
     $('.menu.toggle').click(function () {
       $('.m-item').toggleClass('m-mobile-hide');
@@ -77,8 +81,72 @@
       popup : $('.wechat-qr'),
       position: 'bottom center'
     });
-    $('.qq').popup();
+    $('.qq').popup({
+      popup: $('.qq-qr'),
+      position: 'bottom center'
+    });
 
+  </script>
+  <script type="text/javascript">
+    L2Dwidget.init({
+      "model": {
+        jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
+        "scale": 1
+      },
+      "display": {
+        "superSample": 5,
+        "width": 200,
+        "height": 400,
+        "position": "right",
+        "hOffset": 10,
+        "vOffset": -28
+      }
+    });
+  </script>
+
+  <script type="text/javascript">
+    var isindex=true;
+    var title="";
+    var visitor="！！！";
+  </script>
+
+  <script th:src="@{/js/APlayer.min.js}"></script>
+  <script th:inline="javascript">
+    const ap = new APlayer({
+      container: document.getElementById('player'),
+      fixed:true,
+      autoplay: true,
+      theme: '#FADFA3',
+      loop: 'all',
+      order: 'random',
+      preload: 'auto',
+      volume: 0.3,
+      mutex: true,
+      listFolded: true,
+      listMaxHeight: 90,
+      lrcType: 3,
+      audio: [
+        {
+          name: '眠りの森 ',
+          artist: 'Aimer / Yuuki Ozaki',
+          url: 'http://music.163.com/song/media/outer/url?id=29095828.mp3',
+          cover: '/images/mian.jpg',
+          lrc: '/lrc/mian.lrc',
+          theme: '#ebd0c2'
+        },
+        {
+          /*
+          * http://music.163.com/song/media/outer/url?id={}.mp3 方式获取外链
+          * */
+          name: 'Other Side',
+          artist: '雅-MIYAVI-',
+          url: 'http://music.163.com/song/media/outer/url?id=1378406180.mp3',
+          cover: '/images/side.jpg',
+          lrc: '/lrc/side.lrc',
+          theme: '#46718b'
+        }
+      ]
+    });
   </script>
 </body>
 </html>
