--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>归档</title>
-  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" th:href="@{/css/me.css}">
+  <link rel="stylesheet" th:href="@{/css/APlayer.min.css}">
 </head>
 <body>
 
   <!--导航-->
   <div th:replace="~{fragements::top(n=4)}"></div>
-
   <!--中间内容-->
   <div  class="m-container-small m-padded-tb-big">
     <div class="ui container">
@@ -19,80 +19,32 @@
       <div class="ui top attached padded segment">
         <div class="ui middle aligned two column grid">
           <div class="column">
-            <h3 class="ui teal header">归档</h3>
+            <h3 class="ui blue header">归档</h3>
           </div>
           <div class="right aligned column">
-            共 <h2 class="ui orange header m-inline-block m-text-thin"> 114 </h2> 篇博客
+            共 <h2 th:text="${count}" class="ui orange header m-inline-block m-text-thin"> </h2> 篇博客
           </div>
         </div>
       </div>
 
-      <h3 class="ui center aligned header">2017</h3>
-      <div class="ui fluid vertical menu">
-        <a th:href="@{#}" target="_blank" class="item">
+      <th:block th:each="item : ${archMap}">
+        <h3 class="ui purple center aligned header" th:text="${item.getKey()}"></h3>
+        <div class="ui fluid vertical menu">
+          <a th:href="@{/blog/}+${blog.getId()}" target="_blank" class="item" th:each="blog : ${item.value}">
           <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
+            <i class="mini purple circle icon"></i><span th:text="${blog.getTitle()}"></span>
+            <div class="ui purple basic left pointing label m-padded-mini " th:text="${#dates.format(blog.getUpdateTime(),'MMMdd')}"></div>
           </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-      </div>
-
-      <h3 class="ui center aligned header">2016</h3>
-      <div class="ui fluid vertical menu">
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-        <a th:href="@{#}" target="_blank" class="item">
-          <span>
-            <i class="mini teal circle icon"></i>关于刻意练习的清单
-            <div class="ui teal basic left pointing label m-padded-mini ">9月03</div>
-          </span>
-          <div class="ui orange basic left pointing label m-padded-mini ">原创</div>
-        </a>
-      </div>
-
+            <div class="ui orange basic left pointing label m-padded-mini " th:text="${blog.getFlag()}"></div>
+          </a>
+        </div>
+        <br>
+        <br>
+        <div id="player"></div>
+      </th:block>
 
     </div>
+
   </div>
 
   <br>
@@ -100,14 +52,68 @@
   <!--底部footer-->
   <div th:replace="~{fragements::foot}"></div>
 
-<script th:src="@{https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js}"></script>
-<script th:src="@{https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js}"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget.min.js/}"></script>
+  <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget0.min.js/}"></script>
   <script>
     $('.menu.toggle').click(function () {
       $('.m-item').toggleClass('m-mobile-hide');
     });
 
+  </script>
+  <script th:src="@{/js/APlayer.min.js}"></script>
+  <script th:inline="javascript">
+    const ap = new APlayer({
+      container: document.getElementById('player'),
+      autoplay: true,
+      theme: '#FADFA3',
+      loop: 'all',
+      order: 'random',
+      preload: 'auto',
+      volume: 0.3,
+      mutex: true,
+      listFolded: true,
+      listMaxHeight: 90,
+      lrcType: 3,
+      audio: [
+        {
+          name: '眠りの森 ',
+          artist: 'Aimer / Yuuki Ozaki',
+          url: 'http://music.163.com/song/media/outer/url?id=29095828.mp3',
+          cover: '/images/mian.jpg',
+          lrc: '/lrc/mian.lrc',
+          theme: '#ebd0c2'
+        },
+        {
+          /*
+          * http://music.163.com/song/media/outer/url?id={}.mp3 方式获取外链
+          * */
+          name: 'Other Side',
+          artist: '雅-MIYAVI-',
+          url: 'http://music.163.com/song/media/outer/url?id=1378406180.mp3',
+          cover: '/images/side.jpg',
+          lrc: '/lrc/side.lrc',
+          theme: '#46718b'
+        }
+      ]
+    });
+  </script>
+  <script type="text/javascript">
+    L2Dwidget.init({
+      "model": {
+        jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
+        "scale": 1
+      },
+      "display": {
+        "superSample": 5,
+        "width": 200,
+        "height": 400,
+        "position": "right",
+        "hOffset": 10,
+        "vOffset": -28
+      }
+    });
   </script>
 </body>
 </html>
