--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,6 @@
 
   <!--导航-->
   <div th:replace="~{fragements::top(n=1)}"></div>
-  <div id="player"></div>
   <!--中间内容-->
   <div  class="m-container-big m-padded-tb-big">
     <div class="ui container">
@@ -24,7 +23,7 @@
           <div class="ui top attached segment">
             <div class="ui middle aligned two column grid">
               <div class="column">
-                <h3 class="ui teal header">博客</h3>
+                <h3 class="ui blue header">博客</h3>
               </div>
               <div class="right aligned column">
                 共 <h2 th:text="${page.totalElements}" class="ui orange header m-inline-block m-text-thin"></h2> 篇
@@ -56,7 +55,7 @@
                       </div>
                     </div>
                     <div class="right aligned five wide column">
-                      <a th:text="${blog.type.name}" href="@{#}" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin"></a>
+                      <a th:text="${blog.type.name}" th:href="@{'/types/'+${blog.type.id}}" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin"></a>
                     </div>
                   </div>
                 </div>
@@ -71,7 +70,7 @@
             </div>
           </div>
 
-          <!--footer-->
+          <!--下一页-->
           <div class="ui bottom attached segment" th:if="${page.totalPages > 1} " >
             <div class="ui middle aligned two column grid">
               <div class="column">
@@ -82,7 +81,9 @@
               </div>
             </div>
           </div>
-
+          <br>
+          <br>
+          <div id="player"></div>
         </div>
 
         <!--右边的top-->
@@ -96,15 +97,15 @@
                   <i class="idea icon"></i>分类
                 </div>
                 <div class="right aligned column">
-                  <a href="#" target="_blank">more <i class="angle double right icon"></i></a>
+                  <a th:href="@{/types/}+${-1}" target="_blank">more <i class="angle double right icon"></i></a>
                 </div>
               </div>
             </div>
-            <div class="ui teal segment small">
-              <div class="ui fluid vertical menu" th:each="type:${types}">
-                <a href="#" class="item">
+            <div class="ui blue teal segment small">
+              <div th:if="${type.getBlogs().size()!=0}"  class="ui fluid vertical menu" th:each="type:${types}">
+                <a target="_blank" th:href="@{'/types/'+${type.getId()}}" class="item">
                   <span  th:text="${type.name}"></span>
-                  <div th:text="${type.blogs.size()}" class="ui teal basic left pointing label">13</div>
+                  <div th:text="${type.blogs.size()}" class="ui teal basic left pointing label"></div>
                 </a>
               </div>
             </div>
@@ -118,12 +119,12 @@
                   <i class="tags icon"></i>标签
                 </div>
                 <div class="right aligned column">
-                  <a href="#" target="_blank">more <i class="angle double right icon"></i></a>
+                  <a th:href="@{/tags/}+${-1}"  target="_blank">more <i class="angle double right icon"></i></a>
                 </div>
               </div>
             </div>
-            <div class="ui teal segment">
-              <a  th:each="tag : ${tags}" href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
+            <div class="ui blue segment">
+              <a th:if="${tag.getBlogs().size()!=0}" th:href="@{'/tags/'+${tag.getId()}}" th:each="tag : ${tags}" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
                 <span th:text="${tag.name}"></span> <div th:text="${tag.getBlogs().size()}" class="detail"></div>
               </a>
             </div>
@@ -140,7 +141,7 @@
           </div>
 
           <!--二维码-->
-          <h4 class="ui horizontal divider header m-margin-top-large">扫码交流</h4>
+          <h4 class="ui horizontal divider header m-margin-top-large">扫码♂交流</h4>
           <div class="ui centered card" style="width: 11em">
             <img th:src="@{/images/wechat.jpg}" alt="" class="ui rounded image" >
           </div>
@@ -153,25 +154,25 @@
 
   <br>
   <br>
-  <div th:replace="~{blog-angle::angle-div}"></div>
   <!--底部footer-->
+
   <div th:replace="~{fragements::foot}"></div>
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
-  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
-
-<script type="text/javascript">
+  <script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget.min.js/}"></script>
+  <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget0.min.js/}"></script>
+  <script th:src="@{/js/APlayer.min.js}"></script>
+  <script type="text/javascript">
   L2Dwidget.init({
     "model": {
       jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
       "scale": 1
     },
     "display": {
-      "superSample": 5,
+      "superSample": 3,
       "width": 200,
       "height": 400,
       "position": "right",
@@ -181,22 +182,12 @@
   });
 </script>
 
-<script type="text/javascript">
-  var isindex=true;
-  var title="";
-  var visitor="！！！";
-</script>
-
-  <script th:src="@{/js/APlayer.min.js}"></script>
-  <script th:inline="javascript">
+  <script>
     const ap = new APlayer({
       container: document.getElementById('player'),
-      mini: true,
-      fixed:true,
       autoplay: true,
       theme: '#FADFA3',
       loop: 'all',
-      order: 'random',
       preload: 'auto',
       volume: 0.3,
       mutex: true,
