--- a/src/main/resources/templates/search_result.html
+++ b/src/main/resources/templates/search_result.html
@@ -76,6 +76,7 @@
       </div>
 
     </div>
+    <div id="player"></div>
   </div>
 
   <br>
@@ -84,13 +85,30 @@
   <div th:replace="~{fragements::foot}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-
+<script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
+  <script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
   <script>
     $('.menu.toggle').click(function () {
       $('.m-item').toggleClass('m-mobile-hide');
     });
 
+  </script>
+  <script type="text/javascript">
+    L2Dwidget.init({
+      "model": {
+        jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
+        "scale": 1
+      },
+      "display": {
+        "superSample": 5,
+        "width": 200,
+        "height": 400,
+        "position": "right",
+        "hOffset": 10,
+        "vOffset": -28
+      }
+    });
   </script>
 </body>
 </html>
